Fixed broken UI when choose item

--- a/app/assets/stylesheets/module/_guided-journey-education.scss
+++ b/app/assets/stylesheets/module/_guided-journey-education.scss
@@ -18,6 +18,11 @@
 
   .education-icon--active {
     display: block;
+    height: rem(75);
+
+      img {
+        @include boxSize(auto, 100%);
+      }
   }
 }
 
