--- a/app/assets/stylesheets/module/_guided-journey-interest.scss
+++ b/app/assets/stylesheets/module/_guided-journey-interest.scss
@@ -55,6 +55,11 @@
 
   .interest-icon--active {
     display: block;
+    height: rem(75);
+
+      img {
+        @include boxSize(auto, 100%);
+      }
   }
 }
 
